--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="edu.westga.cs6242.greeter.MainActivity"
+    tools:context="edu.westga.c26242.greeter.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <EditText
@@ -26,4 +26,13 @@
         android:layout_below="@+id/greet_edit_text"
         android:layout_centerHorizontal="true"
         android:text="@string/greet_button" />
+
+    <TextView
+        android:id="@+id/message_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/greet_button"
+        android:gravity="center"
+        android:textSize="30sp" />
+
 </RelativeLayout>
