Add a second button to the UI with text "Reverse". This button should be disabled when it is created by setting its enabled property to false.

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -28,11 +28,20 @@
         android:onClick="didTapGreetButton"
         android:text="@string/greet_button" />
 
+    <Button
+        android:id="@+id/reverse_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/greet_button"
+        android:layout_centerHorizontal="true"
+        android:enabled="false"
+        android:text="@string/reverse_button" />
+
     <TextView
         android:id="@+id/message_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/greet_button"
+        android:layout_below="@id/reverse_button"
         android:gravity="center"
         android:textSize="30sp" />
 
