Add a click-handler for the reverse button to the activity that reverses the text in the TextView. For example, "Hello, Jake!" would become "!ekaJ ,olleH".

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -35,6 +35,7 @@
         android:layout_below="@+id/greet_button"
         android:layout_centerHorizontal="true"
         android:enabled="false"
+        android:onClick="didTapReveseButton"
         android:text="@string/reverse_button" />
 
     <TextView
